crates/goose/src/agents/snapshots/permagent__agents__prompt_manager__tests__family_prompt_size_table.snap
---
source: crates/goose/src/agents/prompt_manager.rs
expression: table
---
shared body (no family selected): 75098 bytes / ~18775 tokens

family        overlay_bytes  total_bytes  approx_total_tokens
anthropic               233        75332                18833
openai                  300        75399                18850
deepseek                253        75352                18838
glm                     287        75386                18847
xai                     215        75314                18829
qwen-local              465        75564                18891
other                     0        75098                18775
